# crowdfunding

./: README.md  db.sqlite3  manage.py  pyproject.toml
crowdfundingapp/: asgi.py  settings.py  urls.py  wsgi.py
crowdfundingweb/: admin.py  apps.py  cart_session.py  context_processors.py  urls.py  views.py
crowdfundingweb/migrations/: 0001_initial.py  0002_alter_contribucion_transaccion.py
crowdfundingweb/models/: campania.py  categoria.py  contribucion.py
crowdfundingweb/templates/: campanias.html  cart.html  catalog.html  index.html  secundaria.html  signin.html  signup.html
static/css/: cards.css  estilos.css
static/js/: crowdfunding.js
