[tool.poetry]
name = "crowdfunding"
version = "1.0.0"
description = ""
authors = ["Edwin Perez <eapp82@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.2.0"
django-extensions = "^3.2.3"
django-bootstrap5 = "^23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
